<resources>
    <string name="app_name">Microservicios Android</string>

    <string name="Tittle"></string>

    <string name="Delete">Eliminar</string>
    <string name="Upload">Actualizar</string>
    <string name="Create">Agregar</string>
    <string name="Read">Consultar</string>
    <string name="Back">Atras</string>

    <string name="Name">Nombre</string>
    <string name="Username">Usuario</string>
    <string name="Rol">Rol</string>
    <string name="ID"></string>
    <string name="Password">Password</string>

    <string name="Description">Lista de Usuarios</string>
    <string name="User">Usuario N°</string>
    <string name="NewUser">Creación de usuario</string>
    <string name="uploadUser">Actualización de usuario</string>
    <string name="NoText">*******</string>
</resources>