<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_grey">

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="26dp"
        android:layout_marginTop="32dp"
        android:text="@string/NewUser"
        android:textColor="@color/dark_red"
        android:textSize="20dp"
        app:layout_constraintStart_toStartOf="@+id/addName"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/addName"
        android:layout_width="231dp"
        android:layout_height="0dp"
        android:layout_marginTop="96dp"
        android:layout_marginBottom="21dp"
        android:drawableLeft="@drawable/usuario"
        android:ems="10"
        android:hint="@string/Name"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/addUser"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/btnAddUser"
        android:layout_width="148dp"
        android:layout_height="68dp"
        android:layout_marginBottom="116dp"
        android:backgroundTint="@color/green"
        android:drawableLeft="@drawable/agregar"
        android:text="@string/Create"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnBack2"
        android:layout_width="131dp"
        android:layout_height="56dp"
        android:layout_marginEnd="272dp"
        android:layout_marginBottom="4dp"
        android:backgroundTint="@color/medium_red"
        android:drawableLeft="@drawable/atras1"
        android:text="@string/Back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addRol"
        app:layout_constraintVertical_bias="0.97" />

    <EditText
        android:id="@+id/addUser"
        android:layout_width="232dp"
        android:layout_height="0dp"
        android:layout_marginBottom="20dp"
        android:drawableLeft="@drawable/programador"
        android:ems="10"
        android:hint="@string/Username"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/addPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addName"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/addRol"
        android:layout_width="234dp"
        android:layout_height="0dp"
        android:layout_marginBottom="199dp"
        android:drawableLeft="@drawable/cambiando"
        android:ems="10"
        android:hint="@string/Rol"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/btnBack2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addPassword" />

    <EditText
        android:id="@+id/addPassword"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="19dp"
        android:drawableLeft="@drawable/bloquear"
        android:ems="10"
        android:hint="@string/Password"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/addRol"
        app:layout_constraintEnd_toEndOf="@+id/addUser"
        app:layout_constraintStart_toStartOf="@+id/addRol"
        app:layout_constraintTop_toBottomOf="@+id/addUser" />

</androidx.constraintlayout.widget.ConstraintLayout>