<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_grey"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="172dp"
        android:layout_marginTop="32dp"
        android:text="@string/Tittle"
        android:textColor="@color/dark_red"
        android:textSize="25dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnCreate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="152dp"
        android:layout_marginBottom="31dp"
        android:backgroundTint="@color/green"
        android:drawableLeft="@drawable/agregar"
        android:text="@string/Create"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/writeID" />

    <ListView
        android:id="@+id/listUsers"
        android:layout_width="355dp"
        android:layout_height="365dp"
        android:layout_marginStart="24dp"
        android:layout_marginBottom="124dp"
        android:background="@color/dark_grey"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="182dp"
        android:layout_height="49dp"
        android:layout_marginStart="124dp"
        android:layout_marginTop="16dp"
        android:text="@string/Description"
        android:textSize="22dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnSearch"
        android:layout_width="1dp"
        android:layout_height="3dp"
        android:layout_marginStart="320dp"
        android:layout_marginTop="56dp"
        android:backgroundTint="@color/dark_red"
        android:text="@string/Read"
        app:layout_constraintStart_toEndOf="@+id/writeID"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/writeID"
        android:layout_width="1dp"
        android:layout_height="1dp"
        android:layout_marginStart="76dp"
        android:layout_marginTop="180dp"
        android:layout_marginEnd="26dp"
        android:layout_marginBottom="306dp"
        android:ems="10"
        android:hint="@string/ID"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/btnCreate"
        app:layout_constraintEnd_toStartOf="@+id/btnSearch"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>